# gnu_halifax

./: AUTHORS  Makefile.am  bootstrap  configure.in
docs/: Makefile.am  README  README.cvs  gfax.1  halifax.1
docs/ghfaxviewer/: ghfaxviewer.1
ghfaxviewer/: .cvsignore  AUTHORS  ChangeLog  Makefile.am  Makefile.win32.in  NEWS  README  README.cvs  TODO  acconfig.h  configure.ac  configure.in  gfv_gtkrc  ghfaxviewer.spec.in
ghfaxviewer/debian/: .cvsignore  Makefile.am  changelog  control  copyright  ghfaxviewer-gnome.menu  ghfaxviewer-gtk.menu  ghfaxviewer.menu  rules
ghfaxviewer/ghfaxwidgets/: ghfwdialogwindow.c  ghfwgdkutils.h  ghfwthumbbox.h  ghfwurlzone.c
ghfaxviewer/ghfaxwidgets/pixmaps/: Makefile.am  layout_down_arrow.xpm  layout_left_arrow.xpm
ghfaxviewer/po/: .cvsignore  ChangeLog  POTFILES.in  de.po  fr.po  ghfaxviewer.pot  pl.po  zh_TW.Big5.po
ghfaxviewer/src/: .cvsignore  Makefile.am  about.c  callbcks.c  callbcks.h  cursors.c  cursors.h  dialog_window.c  draw_page.c  draw_page.h  errors.c  errors.h  fileopen.c  ghfaxviewer-res.rc.in  ghfaxviewer.desktop  gn_print.c  gtkutils.c  gtkutils.h  i18n.h  info.c  menu.c  menu.h  prefs.c  print.h  progress.c  progress.h  ps_print.c  setup.c  setup.h  thumblayout.c  thumblayout.h  thumbnails.c  tiffimages.c  tiffimages.h  tiffinfo.c  tiffinfo.h  toolbar.c  toolbar.h  urlzone.c  urlzone.h  (+5 more)
ghfaxviewer/src/pixmaps/: .cvsignore  Makefile.am  ghfaxviewer-icon.xpm  ghfaxviewer-logo.xpm  info.xpm  layout_down_arrow.xpm  layout_up_arrow.xpm  left90.xpm  left_arrow.xpm  printer.xpm  printer_prefs.xpm  reverse.xpm  right90.xpm  right_arrow.xpm  stock-zoom-in-menu.xpm  stock-zoom-out-menu.xpm  up_arrow.xpm  viewer_prefs.xpm  zoom_in.xpm  zoom_out.xpm
ghfaxwidgets/: .cvsignore  AUTHORS  ChangeLog  Makefile  Makefile.am  NEWS  README  acconfig.h  bootstrap  configure.ac  configure.in  ghfaxwidgets-uninstalled.pc.in  ghfaxwidgets.pc.in  ghfw-config.in
ghfaxwidgets/debian/: changelog  control  copyright  rules
ghfaxwidgets/po/: .cvsignore  POTFILES.in  de.po  fr.po  pl.po  zh_TW.Big5.po
ghfaxwidgets/src/: Makefile.am  ghfaxwidgets.c  ghfaxwidgets.h  ghfwdialogwindow.h  ghfwdlgwindow.c  ghfwdlgwindow.h  ghfwgdkutils.c  ghfwgtkutils.c  ghfwgtkutils.h  ghfwprogress.c  ghfwprogress.h  ghfwthumbbox.c  ghfwthumbbox.h  ghfwurlzone.c  ghfwurlzone.h  ghfwversion.h
ghfaxwidgets/src/pixmaps/: layout_right_arrow.xpm
ghfaxwidgets/tests/: .cvsignore  Makefile.am  dlg_test.c  ghfwtest.c
macros/: Makefile.am  ghfaxwidgets.m4
