pixmaps_DATA = info.xpm ghfaxviewer-logo.xpm ghfaxviewer-icon.xpm \
		viewer_prefs.xpm printer_prefs.xpm
		printer.xpm left90.xpm right90.xpm reverse.xpm \
		right_arrow.xpm left_arrow.xpm \
		viewer_prefs.xpm printer_prefs.xpm \
		hand-closed-data.xbm hand-closed-mask.xbm \
		hand-open-data.xbm hand-open-mask.xbm \

uninstall-local:
	test -d $(pixmapsdir) && \
	  rmdir --ignore-fail-on-non-empty $(pixmapsdir)
